<resources>
    <string name="app_name">MoneyApps</string>
    <string name="home">Home</string>
    <string name="table">Tables</string>
    <string name="viz">Visualization</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>

    <string name="retail">Retail</string>
    <string name="date">Date</string>
    <string name="place">Place</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="tag">Tag</string>

    <string name="confirmButton">Save</string>
    <string name="expense_saved_message">Expense saved</string>

    <string name="present_ticket">Please present a ticket</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>

<!--
        RELATIVE TO TABLE CAR
-->
    <string name="default_text_ps">180PS</string>
    <string name="separator">/</string>
    <string name="default_text_kws">120kW</string>
    <string name="car_producer_image_content_description">Car Producer</string>
    <string name="kw">kW</string>
    <string name="ps">PS</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="power">Power</string>
    <string name="price">Price</string>
</resources>
